--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <main>
         <header>
+            <img src="avatar.jpg" alt="Jack Hacksman" class="avatar">
             <h1>Jack Hacksman</h1>
             <p class="tagline">Proto-AGI Programmer</p>
         </header>
